--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node app/app.js",
+    "generate-swagger": "node generateSwagger.js",
     "predev": "npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
     "swagger": "tsoa spec"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
