--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "predev": "npm run swagger",
     "prebuild": "npm run swagger",
     "build": "tsc",
-    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\""
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "swegger": "tsoa spec"
   },
   "keywords": [],
   "author": "",
