--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run swagger",
     "build": "tsc",
     "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
-    "swegger": "tsoa spec"
+    "swagger": "tsoa spec"
   },
   "keywords": [],
   "author": "",
